[package]
name = "bevy_character_controller"
version.workspace = true
edition.workspace = true

[workspace]
members = ["rigidbody", "kinematic", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = "0.8"
bevy_rapier3d = { version = "0.18", features = [
    "parallel",
    "enhanced-determinism",
    "debug-render",
] }
bevy_extensions = { path = "crates/bevy_extensions" }
bootstrap = { path = "crates/bootstrap" }

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_extensions = { workspace = true }
bootstrap = { workspace = true }

[[bin]]
name = "rigidbody"
path = "rigidbody/src/main.rs"

[[bin]]
name = "kinematic"
path = "kinematic/src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
