[package]
name = "bevy_character_controller"
version.workspace = true
edition.workspace = true

[workspace]
members = ["rigidbody", "kinematic", "manual", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = "0.8"
bevy_rapier3d = { version = "0.18", features = [
    "parallel",
    "enhanced-determinism",
    "debug-render",
] }
bevy-sequential-actions = "0.5"
bevy_extensions = { path = "crates/bevy_extensions" }
bootstrap = { path = "crates/bootstrap" }
bitflags = "1.3"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy-sequential-actions = { workspace = true }
bevy_extensions = { workspace = true }
bootstrap = { workspace = true }
bitflags = { workspace = true }

[[bin]]
name = "rigidbody"
path = "rigidbody/src/main.rs"

[[bin]]
name = "kinematic"
path = "kinematic/src/main.rs"

[[bin]]
name = "manual"
path = "manual/src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
