[package]
name = "bevy_character_controller"
version.workspace = true
edition.workspace = true

[workspace]
members = ["rigidbody", "kinematic", "manual", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = "0.8"
bevy_physics = { path = "crates/bevy_physics" }
bevy_extensions = { path = "crates/bevy_extensions" }
bevy_bootstrap = { path = "crates/bevy_bootstrap" }
bevy_actions = { path = "crates/bevy_actions" }
bitflags = "1.3"
fastrand = "1.8"

[dependencies]
bevy = { workspace = true }
bevy_physics = { workspace = true }
bevy_extensions = { workspace = true }
bevy_bootstrap = { workspace = true }
bevy_actions = { workspace = true }
bitflags = { workspace = true }
fastrand = { workspace = true }

[[bin]]
name = "rigidbody"
path = "rigidbody/src/main.rs"

[[bin]]
name = "kinematic"
path = "kinematic/src/main.rs"

[[bin]]
name = "manual"
path = "manual/src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
