[package]
name = "rigidbody"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy-sequential-actions = { workspace = true }
bevy_extensions = { workspace = true }
bootstrap = { workspace = true }
bitflags = { workspace = true }
